--- a/Esame Pierluigi Ghiani/Esame Pierluigi Ghiani.csproj
+++ b/Esame Pierluigi Ghiani/Esame Pierluigi Ghiani.csproj
@@ -64,4 +64,16 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.8" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Update="ProductPage.xaml.cs">
+	    <DependentUpon>ProductPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="ProductPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
